--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -755,6 +755,10 @@
 
         <section>
             <h2>Thank You!</h2>
+            <h4><a href="https://pivovarit.github.io/talks/java-8-dark-side">https://pivovarit.github.io/talks/java-8-dark-side</a> </h4>
+            <img src="img/talk_qr.jpg"/>
+            <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
+
         </section>
     </div>
 </div>
