--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,25 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>52.</td>
+        <td>54.</td>
+        <td data-location="50.109119, 14.585368" data-place="CineStar">GeeCON Prague 2018</td>
+        <td><a href="https://jdd.org.pl">The Dark Side of Java 8</a></td>
+        <td>19.10.2018</td>
+        <td>Prague/Czech Republic</td>
+    </tr>
+    <tr>
+        <td>53.</td>
         <td data-location="50.070264, 20.036788" data-place="NCK Cracow">JDD 2018</td>
         <td><a href="https://jdd.org.pl">???</a></td>
         <td>8.10.2018</td>
         <td>Cracow/Poland</td>
+    </tr>
+    <tr>
+        <td>52.</td>
+        <td data-location="51.099503, 17.040299" data-place="Ibis Styles">SegFault Wrocław 2018</td>
+        <td><a href="http://wroclaw2018.segfault.events">Java Persistence Beyond Hibernate</a></td>
+        <td>24.09.2018</td>
+        <td>Wroclaw/Poland</td>
     </tr>
     <tr>
         <td>51.</td>
