Add the key takeaway

--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -667,6 +667,7 @@
             <h4 class="fragment">...in the blockchain?</h4>
             <h3 class="fragment">...how to provide a custom thread pool?</h3>
             <h3 class="fragment">...what's the maximum number of tasks executed in parallel?</h3>
+            <h3 class="fragment">...</h3>
         </section>
 
         <section>
@@ -770,14 +771,8 @@
         </section>
 
         <section>
-            <h2>Key takeaways</h2>
-            <h2>Be careful when:</h2>
-
-            <ul>
-                <li>Be careful when using Stream API chains containing flatMap() calls</li>
-                <li>Be careful when using JDK9's takeWhile/dropUntil with the above</li>
-                <li>Be careful when using Parallel Streams</li>
-            </ul>
+            <h2>Key takeaway:</h2>
+            <h3 class="fragment">It's worth migrating to newer JDKs</h3>
         </section>
 
         <section>
