Update the key takeaway

--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -728,7 +728,8 @@
 
         <section>
             <h2>Key takeaway:</h2>
-            <h3 class="fragment">It's worth migrating to newer JDKs</h3>
+            <h3 class="fragment"><s>Java sucks, let's PHP</s></h3>
+            <h3 class="fragment">It's worth migrating to new minor JDK releases. Small things matter.</h3>
         </section>
 
         <section>
