--- a/talks/index.html
+++ b/talks/index.html
@@ -42,7 +42,7 @@
     <tr>
         <td>54.</td>
         <td data-location="50.109119, 14.585368" data-place="CineStar">GeeCON Prague 2018</td>
-        <td><a href="https://jdd.org.pl">The Dark Side of Java 8</a></td>
+        <td><a href="https://jdd.org.pl">???</a></td>
         <td>19.10.2018</td>
         <td>Prague/Czech Republic</td>
     </tr>
@@ -56,7 +56,7 @@
     <tr>
         <td>52.</td>
         <td data-location="51.099503, 17.040299" data-place="Ibis Styles">SegFault Wrocław 2018</td>
-        <td><a href="http://wroclaw2018.segfault.events">Java Persistence Beyond Hibernate</a></td>
+        <td><a href="http://wroclaw2018.segfault.events">???</a></td>
         <td>24.09.2018</td>
         <td>Wroclaw/Poland</td>
     </tr>
@@ -67,6 +67,7 @@
         <td>20.06.2018</td>
         <td>Cracow/Poland</td>
     </tr>
+    <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
         <td>50.</td>
         <td data-location="41.435020, 2.181185" data-place="Cinesa Heron City">JBCNConf</td>
@@ -74,7 +75,6 @@
         <td>12.06.2018</td>
         <td>Barcelona/Spain</td>
     </tr>
-    <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
         <td>49.</td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays</td>
