--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -97,6 +97,7 @@
     <img src="img/69.png" width="800"/>
     <img src="img/70.png" width="800"/>
     <img src="img/71.png" width="800"/>
+    <img src="img/72.png" width="800"/>
 </div>
 
 </body>
