Add the common sense slide

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -596,6 +596,17 @@
         </section>
 
         <section>
+            <blockquote>
+                Using common sense is the ultimate Best Practice™.
+            </blockquote>
+
+            <pre class="fragment"><code data-trim="">
+                 static &lt;T> Tuple1&lt;Option&lt;Try&lt;T>>> Future(Future&lt;T> future)
+            </code></pre>
+
+        </section>
+
+        <section>
             <h2>Thank You!</h2>
             <img src="img/Yoda_SWSB__1_.png" width="400"/>
             <h4>"To Try or not to Try, there is no throws"</h4>
