--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -69,7 +69,7 @@
 
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
-            <h2>System Engineer @ <a href="https://www.casumocareers.com">Casumo</a></h2>
+            <h2>System Engineer @ <a href="https://twitter.com/CasumoTech">CasumoTech</a></h2>
 	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
             <h2><a href="https://github.com/pivovarit">OS Contributor</a></h2>
             <h2><a href="https://dzone.com/users/3083610/pivovarit.html">DZone MVB</a></h2>
