--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -330,6 +330,8 @@
                   Case($Failure($()), "Failed :(")
                 );
             </code></pre>
+
+            <h3><a href="http://openjdk.java.net/jeps/305">JEP-305: Pattern Matching</a></h3>
         </section>
 
         <section>
