--- a/talks/index.html
+++ b/talks/index.html
@@ -49,7 +49,7 @@
     <tr>
         <td>53.</td>
         <td data-location="50.070264, 20.036788" data-place="NCK Cracow">JDD 2018</td>
-        <td><a href="https://jdd.org.pl">???</a></td>
+        <td><a href="https://jdd.org.pl">The Dark Side of Java 8</a></td>
         <td>8.10.2018</td>
         <td>Cracow/Poland</td>
     </tr>
