The only remaining datatype

--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -198,10 +198,7 @@
         </section>
 
         <section>
-            <img src="img/no_compile_no_problem.png" width="700"/>
-        </section>
-
-        <section>
+            <img class="fragment" src="img/datatype.png"/>
         </section>
 
         <section>
