--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -99,6 +99,7 @@
     <img src="img/71.png" width="800"/>
     <img src="img/72.png" width="800"/>
     <img src="img/73.png" width="800"/>
+    <img src="img/74.png" width="800"/>
 </div>
 
 </body>
