--- a/talks/index.html
+++ b/talks/index.html
@@ -40,18 +40,32 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>53.</td>
+        <td>55.</td>
         <td data-location="50.109119, 14.585368" data-place="CineStar">GeeCON Prague 2018</td>
         <td><a href="https://jdd.org.pl">???</a></td>
         <td>19.10.2018</td>
         <td>Prague/Czech Republic</td>
     </tr>
     <tr>
-        <td>52.</td>
+        <td>54.</td>
         <td data-location="50.070264, 20.036788" data-place="NCK Cracow">JDD 2018</td>
         <td><a href="https://jdd.org.pl">The Dark Side of Java 8</a></td>
         <td>8.10.2018</td>
         <td>Cracow/Poland</td>
+    </tr>
+    <tr>
+        <td>53.</td>
+        <td data-location="8" data-place="">Belarus JUG</td>
+        <td><a href="">A Brief Introduction to Vavr</a></td>
+        <td>18.09.2018</td>
+        <td>Minsk/Belarus</td>
+    </tr>
+    <tr>
+        <td>52.</td>
+        <td data-location="" data-place="">Rockstars' Night Kyiv</td>
+        <td><a href="">The Dark Side of Java 8</a></td>
+        <td>30.08.2018</td>
+        <td>Kiev/Ukraine</td>
     </tr>
     <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
