--- a/talks/index.html
+++ b/talks/index.html
@@ -42,7 +42,7 @@
     <tr>
         <td>55.</td>
         <td data-location="50.109119, 14.585368" data-place="CineStar">GeeCON Prague 2018</td>
-        <td><a href="https://jdd.org.pl">???</a></td>
+        <td><a href="http://2018.geecon.cz">The Dark Side of Java 8</a></td>
         <td>19.10.2018</td>
         <td>Prague/Czech Republic</td>
     </tr>
