--- a/talks/index.html
+++ b/talks/index.html
@@ -40,6 +40,13 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
+        <td>56.</td>
+        <td data-location="37.785598, -122.409880" data-place="CineStar">OracleCodeOne 2018</td>
+        <td><a href="https://www.oracle.com/code-one/index.html">Functional Exception Handling in Java</a></td>
+        <td>22.10.2018</td>
+        <td>San Francisco/USA</td>
+    </tr>
+    <tr>
         <td>55.</td>
         <td data-location="50.109119, 14.585368" data-place="CineStar">GeeCON Prague 2018</td>
         <td><a href="http://2018.geecon.cz">The Dark Side of Java 8</a></td>
