--- a/talks/index.html
+++ b/talks/index.html
@@ -40,6 +40,13 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
+        <td>57.</td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">???</td>
+        <td><a href="">The Dark Side of Java 8</a></td>
+        <td>08.12.2018</td>
+        <td>Lublin/Poland</td>
+    </tr>
+    <tr>
         <td>56.</td>
         <td data-location="37.785598,-122.409880" data-place="Hilton @ SF">OracleCodeOne 2018</td>
         <td><a href="https://www.oracle.com/code-one/index.html">Functional Exception Handling in Java</a></td>
