--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,18 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>57.</td>
+        <td>58.</td>
         <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">???</td>
         <td><a href="">The Dark Side of Java 8</a></td>
         <td>08.12.2018</td>
         <td>Lublin/Poland</td>
+    </tr>
+    <tr>
+        <td>57.</td>
+        <td data-location="51.246126,4.418441" data-place="Kinepolis">DevoxxBE</td>
+        <td><a href="https://devoxx.be">Functional Exception Handling in Java with Vavr</a></td>
+        <td>13.11.2018</td>
+        <td>Antwerp/Belgium</td>
     </tr>
     <tr>
         <td>56.</td>
@@ -295,7 +302,7 @@
     </tr>
     <tr>
         <td>22.</td>
-        <td data-location="54.696440, 25.275527" data-place="Radisson Blu">BuildStuffLT</td>
+        <td data-location="54.696440, 25.275527" data-place="Radisson Blu Vilnius">BuildStuffLT</td>
         <td><a href="http://buildstuff.lt">Javaslang - Functional Java Done Right</a></td>
         <td>16.11.2016</td>
         <td>Vilnius/Lithuania</td>
@@ -303,7 +310,7 @@
     <tr>
         <td>21.</td>
         <td data-location="51.246126,4.418441" data-place="Kinepolis">DevoxxBE</td>
-        <td><a href="https://devoxx.ma">Javaslang - Functional Java Done Right</a></td>
+        <td><a href="https://devoxx.be">Javaslang - Functional Java Done Right</a></td>
         <td>08.11.2016</td>
         <td>Antwerp/Belgium</td>
     </tr>
