--- a/talks/index.html
+++ b/talks/index.html
@@ -49,7 +49,7 @@
     <tr>
         <td>57.</td>
         <td data-location="51.246126,4.418441" data-place="Kinepolis">DevoxxBE</td>
-        <td><a href="https://devoxx.be">Functional Exception Handling in Java with Vavr</a></td>
+        <td><a href="https://devoxx.be">Functional Exception Handling in Java with Vavr [Tools in Action]</a></td>
         <td>13.11.2018</td>
         <td>Antwerp/Belgium</td>
     </tr>
