--- a/talks/invasive-frameworks/index.html
+++ b/talks/invasive-frameworks/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>The Dark Side of Java 8</title>
+    <title>Protecting Yourself From Invasive Frameworks</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -61,7 +61,7 @@
     <div class="slides">
 
         <section>
-            <h1>Invasive Frameworks</h1>
+            <h1>Protecting Yourself From Invasive Frameworks</h1>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
