--- a/talks/functional-exception-handling/geecon/index.html
+++ b/talks/functional-exception-handling/geecon/index.html
@@ -53,7 +53,8 @@
 <div class="reveal">
 
     <div class="footer">
-        <small><a href="http://twitter.com/pivovarit">@pivovarit</a></small>
+        <small>Twitter: <a href="http://twitter.com/pivovarit">@pivovarit</a></small>
+        <small>Blog: <a href="https://4comprehension.com">4comprehension.com</a></small>
     </div>
 
     <!-- Any section element inside of this container is displayed as a slide -->
