--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,18 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>57.</td>
+        <td>58.</td>
         <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">???</td>
         <td><a href="">The Dark Side of Java 8</a></td>
         <td>08.12.2018</td>
         <td>Lublin/Poland</td>
+    </tr>
+    <tr>
+        <td>57.</td>
+        <td data-location="50.053351,19.958609" data-place="Hotel Galaxy Cracow">CoreDump Cracow</td>
+        <td><a href="http://coredump.events/2018/">Protect Yourself From Invasive Frameworks</a></td>
+        <td>26.11.2018</td>
+        <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td>56.</td>
