--- a/talks/index.html
+++ b/talks/index.html
@@ -208,7 +208,7 @@
     </tr>
     <tr>
         <td>35.</td>
-        <td data-location="49.802881,24.011409" data-place="Symphony Solutions">JUG Lviv 2017</td>
+        <td data-location="49.802881,24.011409" data-place="Symphony Solutions Office">JUG Lviv 2017</td>
         <td><a href="http://www.jug.lviv.ua">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>14.09.2017</td>
         <td>Lviv/Ukraine</td>
@@ -271,14 +271,14 @@
     </tr>
     <tr>
         <td>26.</td>
-        <td data-location="49.853299,24.024658" data-place="Lohika">Morning@Lohika 2017</td>
+        <td data-location="49.853299,24.024658" data-place="Lohika Office">Morning@Lohika 2017</td>
         <td><a href="http://morning.lohika.com">Functional Java - livecoding session</a></td>
         <td>11.02.2017</td>
         <td>Lviv/Ukraine</td>
     </tr>
     <tr>
         <td>25.</td>
-        <td data-location="52.211838,20.982262" data-place="MiMUW">Warsaw JUG #194</td>
+        <td data-location="52.211838,20.982262" data-place="MiM University of Warsaw">Warsaw JUG #194</td>
         <td><a href="https://warszawa.jug.pl/">Java 9 Stream/Optional API Additions</a></td>
         <td>10.01.2017</td>
         <td>Warsaw/Poland</td>
@@ -302,14 +302,14 @@
     </tr>
     <tr>
         <td>22.</td>
-        <td data-location="54.696440, 25.275527" data-place="Radisson Blu Vilnius">BuildStuffLT 2016</td>
+        <td data-location="54.696440, 25.275527" data-place="RadissonBlu Vilnius">BuildStuffLT 2016</td>
         <td><a href="http://buildstuff.lt">Javaslang - Functional Java Done Right</a></td>
         <td>16.11.2016</td>
         <td>Vilnius/Lithuania</td>
     </tr>
     <tr>
         <td>21.</td>
-        <td data-location="51.246126,4.418441" data-place="Kinepolis">DevoxxBE 2016</td>
+        <td data-location="51.246126,4.418441" data-place="Kinepolis Antwerp">DevoxxBE 2016</td>
         <td><a href="https://devoxx.be">Javaslang - Functional Java Done Right</a></td>
         <td>08.11.2016</td>
         <td>Antwerp/Belgium</td>
@@ -330,14 +330,14 @@
     </tr>
     <tr>
         <td>18.</td>
-        <td data-location="50.059208,19.943648" data-place="DoubleTree by Hilton">JDD 2016</td>
+        <td data-location="50.059208,19.943648" data-place="DoubleTree Cracow by Hilton">JDD 2016</td>
         <td><a href="http://16.jdd.org.pl">Javaslang - Functional Java Done Right</a></td>
         <td>10.10.2016</td>
         <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td>17.</td>
-        <td data-location="52.211838,20.982262" data-place="MiMUW">WarsawJUG #185</td>
+        <td data-location="52.211838,20.982262" data-place="MiM University of Warsaw">WarsawJUG #185</td>
         <td><a href="https://warszawa.jug.pl">Javaslang - Functional Java Done Right</a></td>
         <td>27.09.2016</td>
         <td>Warsaw/Poland</td>
@@ -414,7 +414,7 @@
     </tr>
     <tr>
         <td>6.</td>
-        <td data-location="52.211838,20.982262" data-place="MiMUW">WarsawJUG #178</td>
+        <td data-location="52.211838,20.982262" data-place="MiM University of Warsaw">WarsawJUG #178</td>
         <td>Java 8 vs. Checked Exceptions</td>
         <td>29.03.2016</td>
         <td>Warsaw/Poland</td>
@@ -446,7 +446,7 @@
     </tr>
     <tr>
         <td>2.</td>
-        <td data-location="52.211838,20.982262" data-place="MiMUW">Jinkubator #29</td>
+        <td data-location="52.211838,20.982262" data-place="MiM University of Warsaw">Jinkubator #29</td>
         <td><a href="http://jinkubator.pl/#/meeting/29">Java 8: Lambdas, Monads and Java Collections</a></td>
         <td>12.05.2015</td>
         <td>Warsaw/Poland</td>
