--- a/talks/index.html
+++ b/talks/index.html
@@ -55,7 +55,7 @@
     </tr>
     <tr>
         <td>56.</td>
-        <td data-location="51.246126,4.418441" data-place="Kinepolis">DevoxxBE 2018</td>
+        <td data-location="51.246126,4.418441" data-place="Kinepolis Antwerp">DevoxxBE 2018</td>
         <td><a href="https://devoxx.be">Functional Exception Handling in Java with Vavr [TiA]</a></td>
         <td>13.11.2018</td>
         <td>Antwerp/Belgium</td>
