--- a/talks/index.html
+++ b/talks/index.html
@@ -83,8 +83,8 @@
     </tr>
     <tr>
         <td>52.</td>
-        <td data-location="" data-place="">Rockstars' Night Kyiv 2018</td>
-        <td><a href="">The Dark Side of Java 8</a></td>
+        <td data-location="50.431597,30.513165" data-place="DEPO">Rockstar Night: The Dark Side of Java 2018</td>
+        <td><a href="https://2event.com/events/1497848">The Dark Side of Java 8</a></td>
         <td>30.08.2018</td>
         <td>Kiev/Ukraine</td>
     </tr>
