--- a/talks/index.html
+++ b/talks/index.html
@@ -40,6 +40,13 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
+        <td>59.</td>
+        <td data-location="" data-place="">???</td>
+        <td><a href="">???</a></td>
+        <td>23.02.2019</td>
+        <td>Lviv/Ukraine</td>
+    </tr>
+    <tr>
         <td>58.</td>
         <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop JFall 2018</td>
         <td><a href="">The Dark Side of Java 8</a></td>
