--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,17 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2019</td>
+    </tr>
+    <tr>
         <td>59.</td>
         <td data-location="" data-place="">???</td>
         <td><a href="">???</a></td>
         <td>23.02.2019</td>
         <td>Lviv/Ukraine</td>
+    </tr>
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2018</td>
     </tr>
     <tr>
         <td>58.</td>
