--- a/talks/index.html
+++ b/talks/index.html
@@ -62,7 +62,7 @@
     <tr>
         <td>57.</td>
         <td data-location="50.053351,19.958609" data-place="Hotel Galaxy Cracow">CoreDump Cracow 2018</td>
-        <td><a href="http://coredump.events/2018/">Protect Yourself From Invasive Frameworks</a></td>
+        <td><a href="http://coredump.events/2018/">Wonderful Frameworks and How to Avoid Them</a></td>
         <td>26.11.2018</td>
         <td>Cracow/Poland</td>
     </tr>
