--- a/talks/index.html
+++ b/talks/index.html
@@ -75,9 +75,9 @@
     </tr>
     <tr>
         <td>55.</td>
-        <td data-location="37.785598,-122.409880" data-place="Hilton SF">OracleCodeOne 2018</td>
+        <td data-location="37.784567,-122.400669" data-place="Moscone Center">OracleCodeOne 2018</td>
         <td><a href="https://www.oracle.com/code-one/index.html">Functional Exception Handling in Java</a></td>
-        <td>22.10.2018</td>
+        <td>25.10.2018</td>
         <td>San Francisco/USA</td>
     </tr>
     <tr>
