--- a/talks/wip/wonderful-frameworks/index.html
+++ b/talks/wip/wonderful-frameworks/index.html
@@ -80,7 +80,7 @@
         <section>
             <h2>Thank You!</h2>
             <h4><a href="https://pivovarit.github.io/talks/wonderful-frameworks">https://pivovarit.github.io/talks/wonderful-frameworks</a> </h4>
-            <img src="img/talk_qr.jpg"/>
+            <img src="img/talk_qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
 
         </section>
