--- a/talks/wip/wonderful-frameworks/index.html
+++ b/talks/wip/wonderful-frameworks/index.html
@@ -74,6 +74,11 @@
         </section>
 
         <section>
+            https://doc.akka.io/docs/akka-http/current/introduction.html#philosophy
+            https://www.slideshare.net/debasishg/qconny-12
+            https://twitter.com/progpaintings/status/723276501081190400
+            Hexagonal Architecture, domain decoupled from infra, Hibernate, Lagom, Event sourcing
+            Axon routing
             <h2>Key takeaways:</h2>
         </section>
 
@@ -82,7 +87,6 @@
             <h4><a href="https://pivovarit.github.io/talks/wonderful-frameworks">https://pivovarit.github.io/talks/wonderful-frameworks</a> </h4>
             <img src="img/talk_qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
-
         </section>
     </div>
 </div>
