--- a/talks/index.html
+++ b/talks/index.html
@@ -53,6 +53,13 @@
         <td style="background: #ffffff" colspan="5" align="center">2018</td>
     </tr>
     <tr>
+        <td>60.</td>
+        <td data-location="50.800784, 6.876390" data-place="PhantasiaLand">JavaLand 2019</td>
+        <td><a href="">The Dark Side of Java 8</a></td>
+        <td>19.03.2019</td>
+        <td>Bruhl/Germany</td>
+    </tr>
+    <tr>
         <td>59.</td>
         <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop JFall 2018</td>
         <td><a href="">The Dark Side of Java 8</a></td>
