--- a/talks/index.html
+++ b/talks/index.html
@@ -103,7 +103,7 @@
     </tr>
     <tr>
         <td>53.</td>
-        <td data-location="35.922822,14.474884" data-place="Casumo HQ">Casumo Tech Meetup</td>
+        <td data-location="35.922822,14.474884" data-place="Casumo HQ">Casumo Tech Meetup #1</td>
         <td><a href="https://casumocareers.com">The Dark Side of Java 8</a></td>
         <td>2.10.2018</td>
         <td>Malta</td>
