--- a/talks/index.html
+++ b/talks/index.html
@@ -104,7 +104,7 @@
     <tr>
         <td>53.</td>
         <td data-location="35.922822,14.474884" data-place="Casumo HQ">Casumo Tech Meetup #1</td>
-        <td><a href="https://casumocareers.com">The Dark Side of Java 8</a></td>
+        <td><a href="https://www.eventbrite.com/e/casumo-tech-meetup-1-event-sourced-architectures-java-8-postmortem-tickets-50436487893?aff=CasumoTechMeetup">The Dark Side of Java 8</a></td>
         <td>2.10.2018</td>
         <td>Malta</td>
     </tr>
