Rename the talk

--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -60,7 +60,7 @@
     <div class="slides">
 
         <section>
-            <h1>Wonderful Frameworks and How to Avoid Them</h1>
+            <h1>Fantastic Frameworks and How to Avoid Them</h1>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
@@ -69,7 +69,7 @@
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Lead Engineer @ <a href="https://twitter.com/CasumoTech">CasumoTech</a></h2>
 	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
-            <h3><a href="https://github.com/pivovarit">OS Contributor</a>, <a href="https://dzone.com/users/3083610/pivovarit.html">DZone MVB</a></h3>
+            <h3><a href="https://github.com/pivovarit">OS Contributor</a>
             <h3></h3>
         </section>
 
@@ -84,7 +84,7 @@
 
         <section>
             <h2>Thank You!</h2>
-            <h4><a href="https://pivovarit.github.io/talks/wonderful-frameworks">https://pivovarit.github.io/talks/wonderful-frameworks</a> </h4>
+            <h4><a href="https://pivovarit.github.io/talks/fantastic-frameworks">https://pivovarit.github.io/talks/fantastic-frameworks</a> </h4>
             <img src="img/talk_qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
