--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -60,7 +60,9 @@
     <div class="slides">
 
         <section>
-            <h1>Fantastic Frameworks and How to Avoid Them</h1>
+            <h1>Fantastic Frameworks</h1>
+            <h3>...and How to Avoid Them</h3>
+            <br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
@@ -69,16 +71,32 @@
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Lead Engineer @ <a href="https://twitter.com/CasumoTech">CasumoTech</a></h2>
 	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
-            <h3><a href="https://github.com/pivovarit">OS Contributor</a>
-            <h3></h3>
         </section>
 
         <section>
+            <img src="img/bosch.jpeg" width="70%" class="fragment"/>
+            <div class="fragment">
+                <blockquote>"Scala programmer confronts Java project that uses Maven, Spring, and Hibernate" - Salvador Dali, oil painting, 1946</blockquote>
+                <small>https://twitter.com/progpaintings/status/723276501081190400</small>
+            </div>
+        </section>
+
+        <section>
+            <!--
+
+
+
+
             https://doc.akka.io/docs/akka-http/current/introduction.html#philosophy
             https://www.slideshare.net/debasishg/qconny-12
             https://twitter.com/progpaintings/status/723276501081190400
             Hexagonal Architecture, domain decoupled from infra, Hibernate, Lagom, Event sourcing
             Axon routing
+
+
+
+
+            -->
             <h2>Key takeaways:</h2>
         </section>
 
