Rename the talk

--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Wonderful Frameworks and How to Avoid Them</title>
+    <title>Fantastic Frameworks and How to Avoid Them</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -83,10 +83,13 @@
 
         <section>
             <!--
+            Of course when frameworks are working out, then they are just the bees knees. Well, until one day the framework is no longer the cool kid on the block. The community starts to fade. A couple years down the road, colleagues look askance because of a code base that is on a has-been framework.
+            Not that big of a problem when doing microservices right
 
-
-
-
+            http://memeagora.blogspot.com/2007/11/ruby-matters-frameworks-dsls-and.html
+            https://www.smashingmagazine.com/2017/05/why-no-framework/
+            https://dzone.com/articles/discussion-recap-to-framework-or-not-to-framework
+            https://dev.to/gypsydave5/why-you-shouldnt-use-a-web-framework-3g24
             https://doc.akka.io/docs/akka-http/current/introduction.html#philosophy
             https://www.slideshare.net/debasishg/qconny-12
             https://twitter.com/progpaintings/status/723276501081190400
