--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -100,6 +100,7 @@
     <img src="img/72.png" width="800"/>
     <img src="img/73.png" width="800"/>
     <img src="img/74.png" width="800"/>
+    <img src="img/75.png" width="800"/>
 </div>
 
 </body>
