--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -101,6 +101,11 @@
     <img src="img/73.png" width="800"/>
     <img src="img/74.png" width="800"/>
     <img src="img/75.png" width="800"/>
+    <img src="img/76.png" width="800"/>
+    <img src="img/77.png" width="800"/>
+    <img src="img/78.png" width="800"/>
+    <img src="img/79.png" width="800"/>
+    <img src="img/80.png" width="800"/>
 </div>
 
 </body>
