Add we're hiring

--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -738,7 +738,11 @@
             <h2>Thank You!</h2>
             <h4><a href="https://pivovarit.github.io/talks/java-8-dark-side">https://pivovarit.github.io/talks/java-8-dark-side</a> </h4>
             <img src="img/talk_qr.jpg"/>
-            <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
+            <br>
+
+            <br>
+            <h2>We're hiring!</h2>
+            <h3><a href="https://www.casumocareers.com/open-positions/">www.casumocareers.com</a></h3>
 
         </section>
     </div>
