--- a/talks/index.html
+++ b/talks/index.html
@@ -43,18 +43,25 @@
         <td style="background: #ffffff" colspan="5" align="center">2019</td>
     </tr>
     <tr>
-        <td>61.</td>
+        <td>62.</td>
         <td data-location="50.800784, 6.876390" data-place="PhantasiaLand">JavaLand 2019</td>
         <td><a href="">The Dark Side of Java 8</a></td>
         <td>19.03.2019</td>
         <td>Bruhl/Germany</td>
     </tr>
     <tr>
-        <td>60.</td>
+        <td>61.</td>
         <td data-location="" data-place="">???</td>
         <td><a href="">???</a></td>
         <td>23.02.2019</td>
         <td>Lviv/Ukraine</td>
+    </tr>
+    <tr>
+        <td>60.</td>
+        <td data-location="" data-place="...">Kielce JUG</td>
+        <td><a href="">???</a></td>
+        <td>17.01.2019</td>
+        <td>Kielce/Poland</td>
     </tr>
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2018</td>
