--- a/talks/index.html
+++ b/talks/index.html
@@ -58,7 +58,7 @@
     </tr>
     <tr>
         <td>60.</td>
-        <td data-location="" data-place="...">Kielce JUG</td>
+        <td data-location="50.870255, 20.628023" data-place="Bohomass Lab">Kielce JUG</td>
         <td><a href="">???</a></td>
         <td>17.01.2019</td>
         <td>Kielce/Poland</td>
