--- a/talks/index.html
+++ b/talks/index.html
@@ -68,8 +68,8 @@
     </tr>
     <tr>
         <td>59.</td>
-        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop JFall 2018</td>
-        <td><a href="">The Dark Side of Java 8</a></td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2018</td>
+        <td><a href="https://j-santa.pl">The Dark Side of Java 8</a></td>
         <td>08.12.2018</td>
         <td>Lublin/Poland</td>
     </tr>
