--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -82,6 +82,18 @@
         </section>
 
         <section>
+            <img src="img/orm.png"/>
+            <h4><a href="https://twitter.com/lukaseder/status/1051858654989836288">https://twitter.com/lukaseder/status/1051858654989836288</a></h4>
+
+        </section>
+
+        <section>
+            <img src="img/disenchantment.jpg"/>
+            <h4><a href="http://tonsky.me/blog/disenchantment/">http://tonsky.me/blog/disenchantment/</a></h4>
+
+        </section>
+
+        <section>
             <!--
             Of course when frameworks are working out, then they are just the bees knees. Well, until one day the framework is no longer the cool kid on the block. The community starts to fade. A couple years down the road, colleagues look askance because of a code base that is on a has-been framework.
             Not that big of a problem when doing microservices right
