--- a/talks/wip/pragmatic-multithreading/index.html
+++ b/talks/wip/pragmatic-multithreading/index.html
@@ -74,8 +74,8 @@
 
         <section>
             <h2>Thank You!</h2>
-            <h4><a href="https://pivovarit.github.io/talks/fantastic-frameworks">https://pivovarit.github.io/talks/fantastic-frameworks</a> </h4>
-            <img src="img/talk_qr.png"/>
+            <h4><a href="https://pivovarit.github.io/talks/pragmatic-multithreading">https://pivovarit.github.io/talks/pragmatic-multithreading</a> </h4>
+            <img src="img/qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
     </div>
