--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -82,6 +82,11 @@
         </section>
 
         <section>
+                <blockquote>"Regarding opiniated / unopiniated frameworks, I think they appeal to different types of developers. I now have 20 years of experience. In my first 5-8 years I loved frameworks like Spring. However, as I gained more experience, I felt I needed a framework's "opinion" less and less. Now I avoid them."</blockquote>
+                <small>https://www.infoq.com/news/2018/10/the-road-to-micronaut-1.0</small>
+        </section>
+
+        <section>
             <img src="img/orm.png"/>
             <h4><a href="https://twitter.com/lukaseder/status/1051858654989836288">https://twitter.com/lukaseder/status/1051858654989836288</a></h4>
 
