--- a/talks/wip/pragmatic-multithreading/index.html
+++ b/talks/wip/pragmatic-multithreading/index.html
@@ -60,7 +60,8 @@
     <div class="slides">
 
         <section>
-            <h1>Pragmatic Multithreading in Java</h1>
+            <h1>Pragmatic Multithreading</h1>
+            <h2>in Java</h2>
             <br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
