--- a/talks/functional-exception-handling/index.html
+++ b/talks/functional-exception-handling/index.html
@@ -618,19 +618,12 @@
 
         <section>
             <h2>Thank You!</h2>
+            <img src="img/qr.png"/>
+            <br>
             <img src="img/Yoda_SWSB__1_.png" width="400"/>
             <h4>"To Try or not to Try, there is no throws"</h4>
             <small>Yoda, ~41:3</small>
         </section>
-
-
-        <section>
-            <h2>Please vote!</h2>
-            <img src="img/vote.png"/>
-        </section>
-
-
-
         <!--https://blogs.msdn.microsoft.com/ericlippert/2008/09/10/vexing-exceptions/-->
         <!--http://wiki.c2.com/?UseExceptionsInsteadOfErrorValues-->
     </div>
