--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -105,6 +105,7 @@
     <img src="img/78.png" width="800"/>
     <img src="img/79.png" width="800"/>
     <img src="img/80.png" width="800"/>
+    <img src="img/81.png" width="800"/>
 </div>
 
 </body>
