--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -87,6 +87,10 @@
         </section>
 
         <section>
+            <h2 class="fragment">Nobody cares if it’s your code or the library that broke</h2>
+        </section>
+
+        <section>
             <img src="img/orm.png"/>
             <h4><a href="https://twitter.com/lukaseder/status/1051858654989836288">https://twitter.com/lukaseder/status/1051858654989836288</a></h4>
 
@@ -122,6 +126,7 @@
             http://kristopherwilson.com/2013/11/27/decoupling-the-framework/
             http://memeagora.blogspot.com/2007/11/ruby-matters-frameworks-dsls-and.html
             https://www.smashingmagazine.com/2017/05/why-no-framework/
+            http://tomasp.net/blog/2015/library-frameworks/
             https://dzone.com/articles/discussion-recap-to-framework-or-not-to-framework
             https://dev.to/gypsydave5/why-you-shouldnt-use-a-web-framework-3g24
             https://doc.akka.io/docs/akka-http/current/introduction.html#philosophy
