--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -87,7 +87,7 @@
         </section>
 
         <section>
-            <h2 class="fragment">Nobody cares if it’s your code or the library that broke</h2>
+            <h2 class="fragment">Nobody cares if it’s your code or the library you used</h2>
         </section>
 
         <section>
